tools/tests/errors/surf_name_05.experr
name 'lenght' is not defined
